2012-08-16 Kate Evans
 * changed all DEBUG preproc style flags to GLC_DEBUG
 * Tested with dome 30 and gis 5km. with PGI cmake and autoconf on Jaguar 
 * pass-through derived type is now glissade_solver and includes type pcgdwk, which has been absorbed
 * glissade_solver is now part of glide_global_type, which mean resid_object is no longer needed
 * init_resid subroutine is now alloc-resid, and allocated parts of the model derived type that deal with the JFNK solver
 * JFNK solved with slap when the code is built to run in serial is now a separate subroutine within glam_strs2

2012-01-13 Kate Evans
 * Merged trunk changes since the branch was made.
 * Tested with dome 120 and gis 5km. Bit for bit for first several steps  
 * Can do ./bootstrap on jaguar now

2011-08-25 Bill Sacks
 * removed obsolete bf-config from top-level directory (use
   configure-scripts/bf-config instead)
 * Testing done: ensured that configure-scripts/bf-config works properly
	
2010-09-21 Magnus Hagdorn
 * example-drivers/eis/src/Makefile.am: find include file
 * libglint/Makefile.am: ditto

2010-07-19 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: add new option
 * progs/plotGCvar: add option to overlay plot with ice thickness mask

2010-07-19 Magnus Hagdorn
 * extra_rules.am: add rules to do some more plotting
 * PyGC/PyGC/IO/GC_loadfile.py: fix bug with temperature profile in lithosphere
 * PyGC/progs/plotGCSpot: add program to plot vertical profiles at a particular
   location
 * PyGC/progs/Makefile.am: distribute new program
 * example-drivers/eis/fenscan/Makefile.am: do some more plotting

2010-07-19 Magnus Hagdorn
 * extra_rules.am: add rules to do some more plotting
 * PyGC/progs/plotGCSpotTS: add program to plot variable at one location through
   time
 * PyGC/progs/Makefile.am: distribute new program
 * extensions/erosion/scripts/Makefile.am: ditto
 * example-drivers/eis/fenscan/Makefile.am: do some more plotting
 
2010-07-13 Magnus Hagdorn